# finalproject_Zhukova_NOD

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  valutatrade_1.cast  valutatrade_2.cast  valutatrade_3.cast
valutatrade_hub/: decorators.py  logging_config.py
valutatrade_hub/cli/: interface.py
valutatrade_hub/core/: constants.py  currencies.py  exceptions.py  models.py  usecases.py  utils.py  сurrencies.py
valutatrade_hub/infra/: config.json  database.py  settings.py
valutatrade_hub/parser_service/: api_clients.py  config.py  scheduler.py  storage.py  updater.py
